--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,7 +73,7 @@ nav {
 
 /************************************** Test **************************************/
 
-.main-app {
+/* .main-app {
     text-align: center;
     margin: 100px;
 }
@@ -86,6 +86,7 @@ nav {
     color: white;
     font-size: 18px;
     cursor: pointer;
+    background: orange;
 }
 
 .connect-wallet-button {
@@ -94,4 +95,4 @@ nav {
 
 .mint-nft-button {
     background: orange;
-}
+} */
