--- a/styles/Certificate.module.css
+++ b/styles/Certificate.module.css
@@ -2,7 +2,8 @@
     float: right;
     padding: 70px;
     position: relative;
-    top: -140px;
+    top: -30vh;
+    left: 0vw;
     position: flex;
 }
 
@@ -25,6 +26,13 @@
     font-size: 18px;
     cursor: pointer;
     background: orange;
+}
+
+.downloadButton {
+    float: right;
+    position: relative;
+    top: 1vh;
+    left: -7vw;
 }
 
 .magicText {
