--- a/styles/Certificate.module.css
+++ b/styles/Certificate.module.css
@@ -1,7 +1,25 @@
+.inputBox {
+    padding: 10px;
+    border: 0;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 1);
+    border-radius: 10px;
+    background-color: rgba(5, 5, 0, 0.3);
+    color: grey;
+}
+
+.inputBox:hover {
+    padding: 10px;
+    border: 0;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 1);
+    border-radius: 10px;
+    background-color: rgba(5, 5, 0, 0.3);
+    color: white;
+}
+
 .certPositioning {
     float: right;
     position: relative;
-    top: -17vh;
+    top: -24vh;
     left: -3vw;
     position: flex;
 }
@@ -24,7 +42,20 @@
     color: black;
     font-size: 18px;
     cursor: pointer;
-    background: orange;
+    background: rgba(159, 137, 94, 0.8);
+    box-shadow: 0 0 10px 1px rgba(73, 104, 78, 0.8);
+}
+
+.generateButton:hover {
+    padding: 15px;
+    border: 2px solid #111;
+    border-radius: 12px;
+    min-width: 250px;
+    color: black;
+    font-size: 18px;
+    cursor: pointer;
+    background: rgba(159, 137, 94, 0.8);
+    box-shadow: 0 0 13px 1px rgba(73, 104, 78, 0.8);
 }
 
 .downloadButton {
@@ -32,6 +63,17 @@
     position: relative;
     top: 1vh;
     left: -7vw;
+}
+
+.certText {
+    color: rgba(159, 137, 94, 0.8);
+    font-size: 20px;
+}
+
+.certInputText {
+    color: rgba(200, 179, 137, 0.8);
+    margin-top: 3px;
+    font-size: 17px;
 }
 
 .magicText {
