--- a/styles/Gallery.module.css
+++ b/styles/Gallery.module.css
@@ -2,5 +2,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 40px;
+    margin-top: -20px;
+}
+
+.info {
+    position: relative;
+    color: rgba(65, 55, 60, 0.8);
+    top: 30vh;
+    left: 40%;
+    font-size: 35px;
 }
