--- a/styles/Creation.module.css
+++ b/styles/Creation.module.css
@@ -52,7 +52,7 @@
     font-size: 18px;
     cursor: pointer;
     background: rgba(159, 137, 94, 0.8);
-    box-shadow: 0 0 10px 1px rgba(73, 104, 78, 0.8);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     margin-top: 10px;
 }
 
@@ -65,7 +65,7 @@
     font-size: 18px;
     cursor: pointer;
     background: rgba(159, 137, 94, 0.8);
-    box-shadow: 0 0 13px 1px rgba(73, 104, 78, 0.8);
+    box-shadow: 0 5px 8px rgba(249, 189, 95, 0.8);
 }
 
 .downloadButton {
