--- a/styles/CertBox.module.css
+++ b/styles/CertBox.module.css
@@ -88,10 +88,12 @@
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .button:hover {
     box-shadow: 0 5px 8px rgba(249, 189, 95, 0.8);
+    font-weight: bold;
 }
 
 .disabledButton {
@@ -106,4 +108,5 @@
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     margin-bottom: 20px;
+    font-weight: bold;
 }
