--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,6 +59,7 @@ input[type="file"]::file-selector-button:hover {
     text-decoration: none;
     color: #999;
     padding: 0 1.5rem;
+    z-index: 1;
 }
 
 /************************************** Connect Button Override **************************************/
