--- a/styles/Gallery.module.css
+++ b/styles/Gallery.module.css
@@ -6,13 +6,13 @@
     gap: 40px;
     margin-top: -100px;
     position: relative;
-    left: -20%;
+    left: -17%;
 }
 
 .info {
     position: relative;
     color: rgba(65, 55, 60, 0.8);
-    top: 30vh;
-    left: 40%;
+    top: 45vh;
+    left: 55vw;
     font-size: 35px;
 }
