--- a/styles/Proceeds.module.css
+++ b/styles/Proceeds.module.css
@@ -1,11 +1,127 @@
 .containerW {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 250px;
+    position: relative;
+    top: 20vh;
+    left: 45vw;
+    align-items: center;
 }
 
 .containerV {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 250px;
+    position: relative;
+    top: 40vh;
+    left: 45vw;
+    align-items: center;
 }
 
 .buttonW {
+    padding: 15px;
+    border: 0.5px solid #111;
+    border-radius: 12px;
+    width: 150px;
+    color: black;
+    font-size: 18px;
+    cursor: pointer;
+    background: rgba(159, 137, 94, 0.8);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    margin-top: 10px;
+}
+
+.buttonW:hover {
+    padding: 15px;
+    border: 0.5px solid #111;
+    border-radius: 12px;
+    width: 150px;
+    color: black;
+    font-size: 18px;
+    cursor: pointer;
+    background: rgba(159, 137, 94, 0.8);
+    box-shadow: 0 5px 8px rgba(249, 189, 95, 0.8);
 }
 
 .buttonV {
+    padding: 15px;
+    border: 0.5px solid #111;
+    border-radius: 12px;
+    width: 180px;
+    color: black;
+    font-size: 18px;
+    cursor: pointer;
+    background: rgba(159, 137, 94, 0.8);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    margin-top: 10px;
+}
+
+.buttonV:hover {
+    padding: 15px;
+    border: 0.5px solid #111;
+    border-radius: 12px;
+    width: 180px;
+    color: black;
+    font-size: 18px;
+    cursor: pointer;
+    background: rgba(159, 137, 94, 0.8);
+    box-shadow: 0 5px 8px rgba(249, 189, 95, 0.8);
+}
+
+.waitSpinner {
+    animation: spin 1s linear infinite;
+    height: 19px;
+    width: 19px;
+    border-bottom: 2px solid;
+    border-radius: 60%;
+}
+
+.waitSpinnerCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.inputBox {
+    padding: 10px;
+    width: 140px;
+    border: 0;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 1);
+    border-radius: 10px;
+    background-color: rgba(5, 5, 0, 0.3);
+    color: grey;
+}
+
+.inputBox:hover {
+    padding: 10px;
+    border: 0;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 1);
+    border-radius: 10px;
+    background-color: rgba(5, 5, 0, 0.3);
+    color: white;
+}
+
+.inputBox:focus {
+    padding: 10px;
+    border: 0;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 1);
+    border-radius: 10px;
+    background-color: rgba(5, 5, 0, 0.3);
+    color: grey;
+    outline: 1px solid rgba(65, 55, 60, 0.8);
+}
+
+.inputBox::placeholder {
+    text-align: center;
 }
