--- a/styles/Proceeds.module.css
+++ b/styles/Proceeds.module.css
@@ -2,22 +2,49 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 250px;
+    width: 400px;
     position: relative;
-    top: 20vh;
+    top: 10vh;
     left: 45vw;
     align-items: center;
+}
+
+.headText {
+    color: #999;
+    font-size: 30px;
+    text-align: center;
+}
+
+.amountText {
+    color: #9999;
+    font-size: 20px;
+    text-align: center;
+    margin-top: -10px;
+}
+
+.amount {
+    color: #999;
+    margin-left: 20px;
+    margin-right: 10px;
 }
 
 .containerV {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 250px;
+    width: 400px;
     position: relative;
-    top: 40vh;
+    top: 25vh;
     left: 45vw;
     align-items: center;
+}
+
+.verseInfo {
+    color: #9999;
+    font-size: 15px;
+    text-align: center;
+    width: 550px;
+    margin-top: 25px;
 }
 
 .buttonW {
@@ -53,7 +80,7 @@
     color: black;
     font-size: 18px;
     cursor: pointer;
-    background: rgba(159, 137, 94, 0.8);
+    background: rgba(39, 123, 245, 0.8);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     margin-top: 10px;
 }
@@ -66,8 +93,8 @@
     color: black;
     font-size: 18px;
     cursor: pointer;
-    background: rgba(159, 137, 94, 0.8);
-    box-shadow: 0 5px 8px rgba(249, 189, 95, 0.8);
+    background: rgba(39, 123, 245, 0.8);
+    box-shadow: 0 5px 8px rgba(39, 191, 245, 0.8);
 }
 
 .waitSpinner {
