--- a/styles/Welcome.module.css
+++ b/styles/Welcome.module.css
@@ -25,7 +25,7 @@
 .clauseContainer {
     position: relative;
     padding: 10px;
-    width: 450px; /* Adjust the width as per your requirements */
+    width: 450px;
     font-size: 20px;
     top: 11%;
 }
@@ -44,7 +44,6 @@
     color: #999;
     font-size: 20px;
     text-align: center;
-    /* Add any additional styling as per your requirements */
 }
 
 .chainInfo {
