--- a/styles/Creation.module.css
+++ b/styles/Creation.module.css
@@ -58,18 +58,29 @@
     background: rgba(159, 137, 94, 0.8);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     margin-top: 10px;
+    animation: glowing 2s linear infinite;
 }
 
 .generateButton:hover {
-    padding: 15px;
-    border: 0.5px solid #111;
-    border-radius: 12px;
-    min-width: 250px;
-    color: black;
-    font-size: 18px;
-    cursor: pointer;
+    animation: none;
     background: rgba(159, 137, 94, 0.8);
     box-shadow: 0 5px 8px rgba(249, 189, 95, 0.8);
+}
+
+.disableGlow {
+    animation: none;
+}
+
+@keyframes glowing {
+    0% {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    }
+    50% {
+        box-shadow: 0 5px 8px rgba(159, 137, 94, 0.8);
+    }
+    100% {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    }
 }
 
 .downloadButton {
