--- a/styles/Proceeds.module.css
+++ b/styles/Proceeds.module.css
@@ -5,7 +5,7 @@
     width: 400px;
     position: relative;
     top: 10vh;
-    left: 45vw;
+    left: 40vw;
     align-items: center;
 }
 
@@ -35,7 +35,7 @@
     width: 400px;
     position: relative;
     top: 25vh;
-    left: 45vw;
+    left: 40vw;
     align-items: center;
 }
 
@@ -83,6 +83,7 @@
     background: rgba(39, 123, 245, 0.8);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     margin-top: 10px;
+    animation: glowing 2s linear infinite;
 }
 
 .buttonV:hover {
@@ -95,6 +96,18 @@
     cursor: pointer;
     background: rgba(39, 123, 245, 0.8);
     box-shadow: 0 5px 8px rgba(39, 191, 245, 0.8);
+}
+
+@keyframes glowing {
+    0% {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    }
+    50% {
+        box-shadow: 0 5px 8px rgba(39, 123, 245, 0.8);
+    }
+    100% {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    }
 }
 
 .waitSpinner {
