--- a/styles/Info.module.css
+++ b/styles/Info.module.css
@@ -13,7 +13,8 @@
 .description h1 {
     font-size: 28px;
     font-weight: bold;
-    margin-bottom: 45px;
+    margin-bottom: 30px;
+    color: rgba(159, 137, 94, 0.8);
 }
 
 .description p {
@@ -37,15 +38,15 @@
     color: black;
     font-size: 18px;
     cursor: pointer;
-    background: rgba(236, 236, 236, 0.8);
+    background: rgba(159, 137, 94, 0.8);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-    margin-top: 10px;
+    margin-top: 30px;
     animation: glowing 2s linear infinite;
 }
 
 .button:hover {
     animation: none;
-    box-shadow: 0 5px 8px rgba(236, 236, 236, 0.8);
+    box-shadow: 0 5px 8px rgba(249, 189, 95, 0.8);
 }
 
 @keyframes glowing {
@@ -53,7 +54,7 @@
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     }
     50% {
-        box-shadow: 0 5px 8px rgba(236, 236, 236, 0.8);
+        box-shadow: 0 5px 8px rgba(249, 189, 95, 0.8);
     }
     100% {
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
