underline animation added to nav bar

--- a/styles/Proceeds.module.css
+++ b/styles/Proceeds.module.css
@@ -101,6 +101,7 @@
     cursor: pointer;
     background: rgba(39, 123, 245, 0.8);
     box-shadow: 0 5px 8px rgba(39, 191, 245, 0.8);
+    animation: none;
 }
 
 @keyframes glowing {
