--- a/styles/globals.css
+++ b/styles/globals.css
@@ -196,6 +196,6 @@ input[type="file"]::file-selector-button:hover {
     background: linear-gradient(315deg, #485461 25%, #28313b 55%) !important;
 }
 
-.sc-dSLLkn {
+.sc-efvICy {
     background: linear-gradient(315deg, #485461 25%, #28313b 55%) !important;
 }
