--- a/styles/globals.css
+++ b/styles/globals.css
@@ -215,5 +215,5 @@ input[type="file"]::file-selector-button:hover {
 
 .sc-efvICy {
     background: linear-gradient(315deg, #485461 25%, #28313b 55%) !important;
-    position: "bottomR";
+    position: bottomR;
 }
