--- a/styles/globals.css
+++ b/styles/globals.css
@@ -216,4 +216,7 @@ input[type="file"]::file-selector-button:hover {
 .sc-efvICy {
     background: linear-gradient(315deg, #485461 25%, #28313b 55%) !important;
     position: bottomR;
+    position: fixed;
+    bottom: 0;
+    right: 0;
 }
