--- a/styles/globals.css
+++ b/styles/globals.css
@@ -221,6 +221,8 @@ input[type="file"]::file-selector-button:hover {
     right: 0;
 }
 
+/* Notifications position fix */
+
 .sc-dSLLkn {
     position: bottomR;
     position: fixed;
