--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,6 +116,16 @@ input[type="file"]::file-selector-button:hover {
     border-radius: 12px;
 }
 
+.sc-IeChK.gxHkuP {
+    background-color: rgba(5, 5, 0, 0.3) !important;
+    border-radius: 12px;
+}
+
+.sc-IeChK.kXnVII {
+    background-color: rgba(5, 5, 0, 0.3) !important;
+    border-radius: 12px;
+}
+
 .sc-gAigJI {
     background-color: rgba(5, 5, 0, 0.3) !important;
     border-radius: 12px;
