--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 /************************************** Choose File Box **************************************/
 
 input[type="file"]::file-selector-button {
-    border: 2px solid rgb(99, 67, 41);
+    border: 2px solid #3c67e3;
     padding: 0.2em 0.4em;
     border-radius: 0.2em;
     background: rgba(5, 5, 0, 0.3);
@@ -16,8 +16,8 @@ input[type="file"]::file-selector-button {
 }
 
 input[type="file"]::file-selector-button:hover {
-    background-color: rgba(159, 137, 94, 0.8);
-    border: 2px solid rgb(99, 67, 41);
+    background-color: #5ddcff;
+    border: 2px solid #3c67e3;
     font-family: "Orbitron", sans-serif;
     color: black;
 }
