--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,11 @@ input[type="file"]::file-selector-button:hover {
     color: black;
 }
 
+input[type="file"]::after {
+    content: " *";
+    color: #f06543;
+}
+
 body {
     background: #1d063a;
 }
